--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   pin_code_fields: ^5.2.0 
   auto_size_text: ^2.1.0
   cached_network_image: ^2.3.2+1
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
