--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  websafe_svg: ^1.1.4
-  pin_code_fields: ^5.2.0 
-  auto_size_text: ^2.1.0
-  cached_network_image: ^2.3.2+1
-  autocomplete_textfield: ^1.7.3
-  http: ^0.12.2
+  dio: ^4.0.6
+  websafe_svg: ^2.1.2+5
+  pin_code_fields: ^7.4.0
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.2.2
+  autocomplete_textfield: ^2.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
